syntax = "proto3";
package blog.v1;

option go_package = "github.com/amaurymartiny/bec/x/blog";

import "gogoproto/gogo.proto";

// Msg is the blog.v1 Msg service
service Msg {
  rpc CreatePost(MsgCreatePostRequest) returns (MsgCreatePostResponse);

  rpc CreateComment(MsgCreateCommentRequest) returns (MsgCreateCommentResponse);
}

// MsgCreatePostRequest is the Msg/CreatePost request type.
message MsgCreatePostRequest {
  bytes author = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string title = 2;
  string body = 3;
}

// MsgCreatePostRequest is the Msg/CreatePost response type.
message MsgCreatePostResponse {
  string id = 1;
}

// MsgCreateCommentRequest is the Msg/CreateComment request type.
message MsgCreateCommentRequest {
  bytes author = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string posdId = 2;
  string body = 3;
}

// MsgCreateCommentResponse is the Msg/CreateComment response type.
message MsgCreateCommentResponse {
  string id = 1;
}
